--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">MMM</string>
+    <string name="app_name">Many Many More</string>
+    <string name="settings">Settings</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+    <string name="your_name"><i>your name</i></string>
+    <string name="your_favorite_quote"><i>your favorite quote</i></string>
 </resources>
